[package]
name = "katan"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_matchbox = { version = "0.12", features = ["ggrs"] }
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
itertools = { version = "0.14.0", path = "../itertools" }
bevy_ggrs = "0.19"
rand = "0.9.2"
bevy_simple_text_input = "0.12.0"
bevy_ui_widgets = "0.17.2"
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.19", features = ["wasm-bindgen"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
# TODO: remove when bevy matchbox updates
[patch."crates-io"]
bevy_matchbox =  {git  = "https://github.com/johanhelsing/matchbox", branch = "bevy-0.17"}
